--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,11 @@
-*{
-  .link{
+// *{
+//   .link{
+//     text-decoration: none;
+//     color: inherit;
+//   }
+// }
+* {
+  .link {
     text-decoration: none;
     color: inherit;
   }
