--- a/src/components/featured/Featured.scss
+++ b/src/components/featured/Featured.scss
@@ -68,6 +68,11 @@
             padding: 5px 10px;
             font-size: 14px;
             cursor: pointer;
+
+            &:hover{
+                background-color: white;
+                color: black;
+            }
             }
            }
         }
