--- a/src/components/gigCard/GigCard.scss
+++ b/src/components/gigCard/GigCard.scss
@@ -65,6 +65,7 @@
             width: 16px;
             height: 16px;
             cursor: pointer;
+            object-fit: cover;
         }
 
         .price{
@@ -78,5 +79,7 @@
                 font-weight: 400;
             }
         }
+
+       
     }
 }
